--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.1",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-slick": "^0.29.0",
+    "scroll-carousel-react": "^1.0.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
